# Autonomous-RPA-Architect

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  langgraph.json  main.py  mcp.json  pyproject.toml
docs/: claims_factory_live_evidence.md  community_cloud_limitations.md  community_cloud_setup.md  enterprise_architecture.md  enterprise_plan.md  maestro_studio_web_import.md
proof/: README.md  demo_migrate.py  demo_qa_loop.py  demo_self_heal.py  demo_v030.py  deploy_claims.py  deploy_odoo.py  e2e_fusion_proof.py  e2e_live_demo.py  e2e_odoo_live.py  execution_video.py  failure_injection.py  harvest_odoo.py  record_demo_video.py  record_enterprise_demo.py  record_odoo_demo.py  run_sla_claims.py  sample_pdd.md  suitecrm_seed_client.py  traceability_matrix.py  verify_deployment.py  verify_package_contents.py
research/: The Autonomous RPA Architect_ Engineering Generative Systems for Automated Workflow Development.md  compass_artifact_wf-fe0fd6bc-dbdc-41c2-a414-91c7c894c15f_text_markdown.md  deep-research-report.md  uipath-agentic-rpa.md
scripts/: install_uipath_cli.sh
templates/: CloseAllApplications.xaml.j2  EndProcess.xaml.j2  GetTransactionData.xaml.j2  InitAllApplications.xaml.j2  InitAllSettings.xaml.j2  KillAllProcesses.xaml.j2  Main.xaml.j2  Process.xaml.j2  SetTransactionStatus.xaml.j2  api_workflow.xaml.j2  code_source.cs.j2  coded_testcase.cs.j2  coded_workflow.cs.j2  config_model.cs.j2  dto_model.cs.j2  maestro_decision.dmn.j2  maestro_process.bpmn.j2  project.json.j2
tests/: conftest.py
(+400 files in other folders)
