[project]
name = "autonomous-rpa-architect"
version = "0.1.0"
description = "Autonomous RPA Architect - Generate complete UiPath projects from Process Design Documents"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Nick Satyawan", email = "puneetsatyawan@gmail.com"},
]
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "anthropic>=0.40",
    "openai>=1.50",
    "chromadb>=0.5",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "mcp>=1.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
uipath = [
    "httpx>=0.27",
]
harvest = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "playwright>=1.40",
]

[project.scripts]
rpa-architect = "rpa_architect.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpa_architect"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests needing real external services (deselect with '-m not integration')",
]
